Add functions for getting partner contacts
